--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+/* slick slider styles */
+@media (min-width: 1000px) {
+  .slick-slide {
+    padding: 0 20px !important;
+  }
+  .slick-list {
+    padding: 0 -20px !important;
+  }
+}
+.slider-overlay {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .slider-overlay {
+    display: inline-block;
+  }
+}
+.slick-slide {
+  padding: 0 15px !important;
+}
+.slick-list {
+  padding: 0 -15px !important;
+}
+
+.slick-list {
+  height: 460px !important;
+}
+.slick-slide {
+  height: 100% !important;
+}
