--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,323 @@
 .slick-slide {
   height: 100% !important;
 }
+
+/* orbit animation styles */
+
+.orbit {
+  background: transparent;
+  position: absolute;
+  top: 0;
+  left: auto;
+  float: left;
+  width: 100%;
+  height: 100%;
+}
+
+.orbit-icon {
+  width: 1.6em;
+  height: 1.6em;
+  line-height: 1.6em;
+  font-size: 1.2em;
+  border-radius: 50%;
+  background: #ccc;
+  color: #fff;
+  text-align: center;
+  display: block;
+}
+
+.orbit-wrap {
+  height: 50em;
+  list-style: none;
+  font-size: 1.3em;
+}
+
+.orbit-wrap > li {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.orbit-wrap > li:hover ul {
+  border-width: 2px;
+  border-color: #fff;
+}
+
+.orbit-wrap > li:hover ~ li ul {
+  border-color: rgba(255, 255, 255, 0.2);
+}
+
+.orbit-wrap > li:hover ~ li ul li {
+  opacity: 0.4;
+}
+
+ul[class^="ring"] {
+  border: solid 1px rgba(244, 250, 255, 0.8);
+  position: relative;
+  padding: 0;
+  border-radius: 50%;
+  list-style: none;
+  box-sizing: content-box;
+  transition: all 300ms ease-in-out;
+}
+
+ul[class^="ring"] li {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.6em;
+  height: 1.6em;
+  margin: -0.8em;
+  transition: all 300ms ease-in-out;
+}
+
+.ring-0 {
+  width: 25em;
+  height: 25em;
+  animation: clockwiseRotate 35s linear infinite;
+}
+
+.ring-0 i {
+  animation: counterClockwiseRotate 35s linear infinite;
+}
+
+.ring-0 > *:nth-of-type(1) {
+  transform: rotate(0deg) translate(12.5em - 0) rotate(0deg);
+}
+
+.ring-0 > *:nth-of-type(2) {
+  transform: rotate(45deg) translate(12.5em - 0) rotate(-45deg);
+}
+
+.ring-0 > *:nth-of-type(3) {
+  transform: rotate(90deg) translate(12.5em - 0) rotate(-90deg);
+}
+
+.ring-0 > *:nth-of-type(4) {
+  transform: rotate(135deg) translate(12.5em - 0) rotate(-135deg);
+}
+
+.ring-1 {
+  width: 20em;
+  height: 20em;
+  animation: clockwiseRotate 30s linear infinite;
+}
+
+.ring-1 i {
+  animation: counterClockwiseRotate 30s linear infinite;
+}
+
+.ring-1 > *:nth-of-type(1) {
+  transform: rotate(0deg) translate(10em - 2.5) rotate(0deg);
+}
+
+.ring-1 > *:nth-of-type(2) {
+  transform: rotate(60deg) translate(10em - 2.5) rotate(-60deg);
+}
+
+.ring-1 > *:nth-of-type(3) {
+  transform: rotate(120deg) translate(10em - 2.5) rotate(-120deg);
+}
+
+.ring-2 {
+  width: 15em;
+  height: 15em;
+  animation: clockwiseRotate 25s linear infinite;
+}
+
+.ring-2 i {
+  animation: counterClockwiseRotate 25s linear infinite;
+}
+
+.ring-2 > *:nth-of-type(1) {
+  transform: rotate(0deg) translate(7.5em - 5) rotate(0deg);
+}
+
+.ring-2 > *:nth-of-type(2) {
+  transform: rotate(45deg) translate(7.5em - 5) rotate(-45deg);
+}
+
+.ring-2 > *:nth-of-type(3) {
+  transform: rotate(90deg) translate(7.5em - 5) rotate(-90deg);
+}
+
+.ring-2 > *:nth-of-type(4) {
+  transform: rotate(135deg) translate(7.5em - 5) rotate(-135deg);
+}
+
+.ring-2 > *:nth-of-type(5) {
+  transform: rotate(180deg) translate(7.5em - 5) rotate(-180deg);
+}
+
+.ring-2 > *:nth-of-type(6) {
+  transform: rotate(225deg) translate(7.5em - 5) rotate(-225deg);
+}
+
+.ring-2 > *:nth-of-type(7) {
+  transform: rotate(270deg) translate(7.5em - 5) rotate(-270deg);
+}
+
+.ring-2 > *:nth-of-type(8) {
+  transform: rotate(315deg) translate(7.5em - 5) rotate(-315deg);
+}
+
+.ring-3 {
+  width: 10em;
+  height: 10em;
+  animation: clockwiseRotate 20s linear infinite;
+}
+
+.ring-3 i {
+  animation: counterClockwiseRotate 20s linear infinite;
+}
+
+.ring-3 > *:nth-of-type(1) {
+  transform: rotate(0deg) translate(2.5em - 7.5) rotate(0deg);
+}
+
+.ring-3 > *:nth-of-type(2) {
+  transform: rotate(120deg) translate(2.5em - 7.5) rotate(-120deg);
+}
+
+.ring-3 > *:nth-of-type(3) {
+  transform: rotate(240deg) translate(2.5em - 7.5) rotate(-240deg);
+}
+
+.orbit-center {
+  z-index: 5;
+  font-size: 2em;
+  width: 1.8em;
+  height: 1.8em;
+  line-height: 1.8em;
+  text-align: center;
+  background: hotpink;
+  border-radius: 50%;
+}
+
+.orbit-center:hover .orbit-center__icon {
+  transform: rotateZ(0deg);
+}
+
+.orbit-center__icon {
+  transform: rotateZ(-360deg);
+  transition: all 300ms ease-in-out;
+}
+
+.orbit-wrap > li.orbit-center:hover ~ li > ul {
+  width: 0;
+  height: 0;
+}
+
+.orbit-wrap > li.orbit-center:hover ~ li > ul * {
+  transform: translate(0, 0);
+}
+
+@keyframes clockwiseRotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes counterClockwiseRotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+.fa-heart-o {
+  background: #b71c1c;
+  color: white;
+}
+
+.fa-coffee {
+  background: #4caf50;
+  color: #cddc39;
+}
+
+.fa-safari {
+  background: white;
+  color: darkslateblue;
+}
+
+.fa-firefox {
+  background: #1565c0;
+  color: #ff8f00;
+}
+
+.fa-chrome {
+  background: #fbc02d;
+  color: #ef6c00;
+}
+
+.fa-edge {
+  background: #03a9f4;
+  color: white;
+}
+
+.fa-android {
+  background: snow;
+  color: limegreen;
+}
+
+.fa-apple {
+  background: #444;
+  color: white;
+}
+
+.fa-linux {
+  background: white;
+  color: #222;
+}
+
+.fa-windows {
+  background: white;
+  color: #03a9f4;
+}
+
+.fa-terminal {
+  background: #222;
+  color: white;
+}
+
+.fa-html5 {
+  background: white;
+  color: #e65100;
+}
+
+.fa-css3 {
+  background: white;
+  color: #2196f3;
+}
+
+.fa-git {
+  background: #222;
+  color: white;
+}
+
+.fa-free-code-camp {
+  background: green;
+  color: white;
+}
+
+.fa-meetup {
+  background: red;
+  color: white;
+}
+
+.fa-podcast {
+  background: red;
+  color: white;
+}
+
+.fa-codepen {
+  background: #333;
+  color: white;
+}
